# zk-supply-chain-management-sytem-in-sp1

./: .gitmodules  README.md
circuits/circuit-for-distributor/: README.md
circuits/circuit-for-distributor/script/src/: main.rs
circuits/circuit-for-manufacturer/: README.md
circuits/circuit-for-manufacturer/program/: .gitignore
circuits/circuit-for-manufacturer/script/: Cargo.toml
circuits/circuit-for-manufacturer/script/src/: main.rs
circuits/circuit-for-retailer/: .gitignore  README.md
circuits/circuit-for-retailer/script/: Cargo.toml
circuits/circuit-for-retailer/script/src/: main.rs
circuits/circuit-for-supplier/: README.md
circuits/circuit-for-supplier/program/src/: main.rs
circuits/circuit-for-supplier/script/src/: main.rs
contracts/: README.md
contracts/src/: SupplyChainManagementSystem.sol  SupplyChainVerifier.sol
contracts/test/: SupplyChainManagementSystem.t.sol  SupplyChainVerifier.t.sol
program/: Cargo.toml
program/src/: main.rs
script/src/: main.rs
zk-circuit-for-consumer/: README.md
zk-circuit-for-consumer/program/src/: main.rs
zk-circuit-for-distributor/program/src/: main.rs
zk-circuit-for-logistics-company/program/: Cargo.toml
zk-circuit-for-manufacturer/: .gitignore
zk-circuit-for-manufacturer/program/src/: main.rs
zk-circuit-for-retailer/program/src/: main.rs
zk-circuit-for-retailer/script/src/: main.rs
zk-circuit-for-supplier/: README.md  run_program_and_script.sh
zk-circuit-for-supplier/program/src/: main.rs
zk-circuit-for-supplier/script/src/: main.rs
