[package]
name = "zk-for-supply-chain-in-sp1-script"
# version = { workspace = true }
edition = "2021"
# edition = { workspace = true }
publish = false
default-run = "zk-for-supply-chain-in-sp1-script"

[dependencies]
sp1-zkvm = "4.0.0"
sp1-sdk = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "4.0.0"
